# MLP-numpy

./: .gitignore  README.md  pyproject.toml
src/mlp_numpy/: __init__.py  exploration.ipynb
