[project]
name = "mlp-numpy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.29.5",
    "numpy>=2.1.1",
    "torch>=2.4.1",
    "torchvision>=0.19.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
